--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ main {
     font-family: 'Chewy', cursive;
 }
 
-button {
+.addBook {
     width: 10vw;
     height: 10vh;
     position: relative;
@@ -63,7 +63,7 @@ button {
     box-shadow: inset 15px 15px 22px 0px rgba(250, 250, 250, 0.31);
 }
 
-button:active {
+.addBook:active {
     box-shadow: inset 5px 5px 15px 0px rgba(0, 0, 0, 0.41);
 }
 
@@ -74,17 +74,40 @@ button:active {
 }
 
 .bookform {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 0.5fr 1fr 4fr;
     background-color: white;
     border-radius: 1vw;
     border: 3px solid darkblue;
     width: 20vw;
-    padding: 3vw;
+    padding: 2vw 2vw 2vw 2vw;
     position: absolute;
     left: 37vw;
+    bottom: 30vh;
     z-index: 2;
-    animation: slideDown 1s ease-out;
+    animation: slideDown 0.5s ease-out;
     font-family: 'Chewy', cursive;
     letter-spacing: 1pt;
+}
+
+input {
+    border: 2px solid #E0E0E0;
+    width: 15vw;
+    height: 3vh;
+    border-radius: 5px;
+    background-color: #F0F0F0;
+}
+
+.submit {
+    border-radius: 300px;
+    background-color: #6C5CE7;
+    color: white;
+    height: 5vh;
+    width: 5vw;
+    font-family: 'Chewy', cursive;
+    font-size: 12pt;
+    letter-spacing: 2px;
 }
 
 @keyframes slideDown {
@@ -114,4 +137,28 @@ button:active {
     padding: 0vw;
     margin: 0px;
     letter-spacing: 2pt;
+    grid-area: 2 / 1 / 3 / 3;
+}
+
+.cancel {
+    grid-area: 1 / 2 / 2 / 3;
+    height: 3vh;
+    width: 3vh;
+    background-color: transparent;
+    border: none;
+    justify-self: end;
+    font-size: 20pt;
+    font-family: 'Chewy', cursive;
+}
+
+.cancel:active {
+    color: darkgray;
+}
+
+.cancel:hover {
+    color: #6C5CE7;
+}
+
+form {
+    grid-area: 3 / 1 / 4 / 3;
 }
