--- a/style.css
+++ b/style.css
@@ -42,12 +42,23 @@ main {
 
 .bookCard {
     margin: 5vw 0vw 0vw 0vw;
-    padding: 2vw 1vw 2vw 2vw;
+    padding: 0vw 0vw 2vw 0vw;
     border-radius: 15px 15px 0px 0px;
-    font-size: 1.5vw;
-    width: 3vw;
+    font-size: 24pt;
+    width: 10vw;
+    height: 35vh;
     writing-mode: vertical-rl;
     font-family: 'Chewy', cursive;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid grey;
+}
+
+.bookCard .cancel{
+    position: relative;
+    top: 0vh;
+    left: 4vw;
 }
 
 .addBook {
